[package]
name = "blivet"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
description = "A correct, full-featured Unix daemon library and CLI for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camercu/blivet"
readme = "README.md"
keywords = ["daemon", "daemonize", "fork", "unix", "linux"]
categories = ["os::unix-apis"]
exclude = [
    ".claude/",
    ".github/",
    "Dockerfile",
    ".dockerignore",
    ".pre-commit-config.yaml",
    ".releaserc.json",
    "commitlint.config.js",
    "deny.toml",
    "docs/",
    "justfile",
    "package.json",
    "package-lock.json",
    "scripts/",
    "shell.nix",
    ".envrc",
]

[[bin]]
name = "daemonize"
path = "src/main.rs"

[dependencies]
nix = { version = "0.31", features = ["fs", "signal", "process", "user", "resource"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
relentless = "0.7"
