[package]
name = "blivet"
version = "0.10.0"
edition = "2021"
rust-version = "1.85"
description = "A correct, full-featured Unix daemon library and CLI for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camercu/blivet"
readme = "README.md"
keywords = ["daemon", "daemonize", "fork", "unix", "linux"]
categories = ["os::unix-apis"]
# Allowlist what ships to crates.io (default-deny): only the library, the
# `daemonize` binary, the runnable example, and the legal/readme/changelog
# files. README.md is required — src/main.rs embeds it via include_str!.
# Cargo.toml and Cargo.lock are always packaged automatically.
include = [
    "/src/**/*.rs",
    "/examples/**/*.rs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[[bin]]
name = "daemonize"
path = "src/main.rs"

[package.metadata.docs.rs]
# Render the cfg-gated daemonize thread-count paths for the supported
# Unix targets, not just the default Linux build. OpenBSD is omitted: it is a
# tier-3 target without a prebuilt std for docs.rs to build against.
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-apple-darwin",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd",
]

[dependencies]
nix = { version = "0.31", features = ["fs", "signal", "process", "user", "resource"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
relentless = "0.7"
signal-hook = "0.3"
